--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,23 @@
 {
+  "scripts": {
+    "build": "npm i && tsc",
+    "dev": "nodemon ./src/app.ts",
+    "start": "node ./dist/app.js"
+  },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5"
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
